- Updated jscrollpane to latest version (not actually necessary in the end) - Made changes to how the scrollbars work such that only the survey/poll area (and not the text above) scrolls - Scrollbar no longer auto-reinitializes every second and is now manually re-initializing when the accordion is triggered - When the accordion is triggered, scroll to the new location - More css fixes

--- a/public/css/starbar-hellomusic.css
+++ b/public/css/starbar-hellomusic.css
@@ -745,6 +745,10 @@
 	height: 280px;
 }
 
+/* accordions */
+#sayso-starbar #starbar-player-console .sb_popBox .sb_accordion{
+	width: 490px;
+}
 
 /* Keep this at end of file. It's used for testing if CSS is loaded. */
 
